Fix toolbar too big

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 .view-toggler image {
   margin-right: 6px;
 }
+
+/* Workaround Large Text issue */
+/* https://gitlab.gnome.org/GNOME/libadwaita/-/merge_requests/539 */
+combobox button, dropdown button {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  min-height: 30px;
+}
